# PhysicsEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  generate_commits.py
include/: Collider.hpp  PhysicsWorld.hpp  Renderer.hpp  RigidBody.hpp  SphereCollider.hpp  Vector3.hpp
src/: CMakeLists.txt  PhysicsWorld.cpp  Renderer.cpp  RigidBody.cpp  main.cpp
tests/: CMakeLists.txt  PhysicsTests.cpp
